[project]
name = "arisha-payments"
version = "0.1.0"
description = "Asynchronous payment processing microservice with guaranteed event delivery"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Arisha" },
]
dependencies = [
    "fastapi>=0.115.6,<1.0.0",
    "uvicorn[standard]>=0.32.1,<1.0.0",
    "pydantic>=2.10.3,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "faststream[rabbit]>=0.5.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "structlog>=24.4.0,<30.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "webhook_receiver"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "webhook_receiver", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "PT",
    "RET",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "PT011"]
"alembic/*" = ["E", "N", "UP"]
"alembic/versions/*" = ["E", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app", "webhook_receiver"]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
